<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#000000"
    tools:context=".RellenarNotas">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="67dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextPorcentajeTeoricas"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/porcentaje_teoricas"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editTextPorcentajePracticas"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/porcentaje_practicas"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#000000"
            android:backgroundTint="#000000" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRellenarNotas"
            android:layout_width="match_parent"
            android:layout_height="423dp">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/buttonRellenar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/siguiente" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>